--- a/project.config.json
+++ b/project.config.json
@@ -65,6 +65,13 @@
         {
           "name": "pages/test/test",
           "pathName": "pages/test/test",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "musiclist",
+          "pathName": "pages/musiclist/musiclist",
+          "query": "playlistId=104565668",
           "scene": null
         }
       ]
