--- a/project.config.json
+++ b/project.config.json
@@ -73,6 +73,12 @@
           "pathName": "pages/musiclist/musiclist",
           "query": "playlistId=104565668",
           "scene": null
+        },
+        {
+          "name": "player",
+          "pathName": "pages/player/player",
+          "query": "musicId=247187&index=0",
+          "scene": null
         }
       ]
     }
